--- a/WpfApp_04_06/MainWindow.xaml
+++ b/WpfApp_04_06/MainWindow.xaml
@@ -7,6 +7,26 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
+        <TextBlock Text="Перше число:" Grid.Row="0"/>
+        <TextBox x:Name="Number1TextBox" Grid.Row="0" Margin="100,0,0,0"/>
+
+        <TextBlock Text="Друге число:" Grid.Row="1"/>
+        <TextBox x:Name="Number2TextBox" Grid.Row="1" Margin="100,0,0,0"/>
+
+        <TextBlock Text="Операція (+, -, *, /):" Grid.Row="2"/>
+        <TextBox x:Name="OperationTextBox" Grid.Row="2" Margin="160,0,0,0"/>
+
+        <Button Content="Виконати" Click="ExecuteButton_Click" Grid.Row="3" HorizontalAlignment="Center" Margin="0,20,0,0"/>
+
+        <TextBlock Text="Результат:" Grid.Row="4"/>
+        <TextBox x:Name="ResultTextBox" Grid.Row="4" Margin="80,0,0,0" IsReadOnly="True" VerticalScrollBarVisibility="Auto"/>
     </Grid>
 </Window>
